project/kicl/src/api/behance/component/project/project.scss
@import '_import';

[data-api='behance.project'] {
    $image_padding_top: 71.11%;
    $image_space : rem($space / 2);

    margin: 0 auto;
    max-width: grid-size($tablet-size);
    padding: rem($gutter);
    padding-top: rem($gutter * 3);
    position: relative;

    @include mobile () {
        padding-top: rem($gutter);
    }

    h1,
    p {
        text-align: center;
    }

    h1 {
        @include set-font-size(1.5);

        margin-top: rem($gutter);
    }

    img {
        @include set-transition(transform);
        @include transition-duration($slowest);

        @include transform(translate3d(-50%, -50%, 0));

        left: 50%;
        position: absolute;
        top: 50%;
        width: 100%;
    }

    p {
        width: 100%;

        &.isImage {
            $img-height: 71.11%;

            @include set-transition(border-color);

            background-position: center;
            background-repeat: no-repeat;
            background-size: cover;
            cursor: -webkit-zoom-in;
            overflow: hidden;
            padding-top: $img-height;
            position: relative;
            width: calc(100% - #{$image_space * 2});

            img {
                z-index: 1;
            }

            span {
                @include set-transition(opacity, transform);
                @include set-font-size(1.3);

                @include transform(translate3d(-50%, -50%, 0) scale3d(.9, .9, 1));

                @include opacity(0);

                color: $white;
                font-family: $heading_font_family;
                left: 50%;
                position: absolute;
                top: 50%;
                z-index: 4;
            }

            &:before {
                @include set-transition(opacity);

                @include opacity(0);

                background-color: $darkest_grey;
                content: '\0020';
                height: 100%;
                left: 0;
                position: absolute;
                top: 0;
                width: 100%;
                z-index: 2;
            }

            &:after {
                @include set-transition(opacity, transform);

                @include transform(scale(.9));
                @include opacity(0);

                border: 3px solid $dark_white;
                display: block;
                content: '\0020';
                height: calc(100% - #{rem($gutter * 2)});
                left: rem($gutter);
                position: absolute;
                top: rem($gutter);
                width: calc(100% - #{rem($gutter * 2)});

                z-index: 3;
            }

            &:hover {
                border-color: $black;

                img {
                    @include transform(scale3d(1.2, 1.2, 1) translate3d(-42.5%, -42.5%, 0));
                }

                span {
                    @include transform(translate3d(-50%, -50%, 0) scale3d(1, 1, 1));

                    @include opacity(1);
                }

                &:before {
                     @include opacity(.4);
                }

                &:after {
                    @include transform(scale(1));
                    @include opacity(1);
                }
            }

            + .isImage {
                margin-left: $image_space;
                margin-right: $image_space;
                padding-top: $img-height / 2;
                width: calc(50% - #{$image_space * 2});

                @include mobile () {
                    padding-top: $img-height;
                    width: 100%;
                }
            }
        }
    }

    header {
        @include display(flex);
        @include flex-direction(column);
        @include align-items(center);

        margin-bottom: rem($gutter);

        figure {
            @include order(1);

            @include box-shadow($shadow-center);

            @include circle(grid-size(2));

            background-position: center;
            background-size: cover;
        }

        h1 {
            @include order(2);

            margin-top: 0;
        }

        p {
            @include order(3);
        }

        .fields {
            @include order(4);

            margin-top: rem($gutter);
        }
    }

    div {
        @include display(flex);
        @include flex-wrap(wrap);
        @include justify-content(center);
    }

    aside {
        margin: 0 rem($gutter);
    }

    footer {
        margin-top: rem($gutter);
    }

    .fields,
    .stats,
    .tags {
        @include pills();

        li {
            @include box-shadow($shadow-center);

            @include mobile () {
                @include truncate(calc(50% - #{rem($gutter)}));

                span {
                    + span {
                        @include truncate(auto);
                    }
                }
            }
        }
    }

    .fields,
    .tags {
        text-align: center;
    }

    .stats {
        li {
            @include display(flex);

            padding: 0;
        }

        span {
            @include pill();

            border-radius: 0;
            position: relative;
            z-index: 1;

            &:first-child {
                border-right: 1px solid $darkest-white;
                font-weight: $thicker_font_weight;
                z-index: 2;
            }
        }
    }

    .tool {
        $font-size: 2;

        @include display(flex);
        @include flex-direction(column);
        @include align-items(center);
        @include justify-content(center);

        padding: rem($space);

        li {
            
        }

        button,
        a {
            @include set-transition(background-color);

            @include display(flex);
            @include align-items(center);
            @include justify-content(center);

            background-color: transparent;
            border: 1px solid $grey;
            border-radius: rem($space / 2);
            padding: rem($gutter);

            &:hover {
                background-color: $darker_white;
            }
        }

        span {
            @include truncate();
        }

        i {
            margin-right: rem($space);

            &:before {
                height: rem($gutter * $font-size * 1.02);
                text-align: center;
                width: rem($gutter * $font-size * 1.02);
            }
        }

        .link {
            @include mobile () {
                i {
                    @include hidden();
                }

                span {
                   @include set-font-size(.95);

                   text-align: center;
                }
            }
        }
    }
}

